# branchless-algorithms-rs

./: .gitignore  Cargo.toml  README.md
benches/: math.rs  sort.rs
src/: lib.rs
src/math/: absolute_value.rs  check_non_zero_unsigned.rs  inequalities.rs  maximum.rs  minimum.rs  mod.rs  perfect_numbers.rs  prime_numbers.rs  zero_checks.rs
src/sorting/: bubble_sort.rs  gnome_sort.rs  mod.rs  quick_sort.rs  selection_sort.rs
